examples/tests/valid/use_inflight_method_inside_init_closure.main.w
bring cloud;

class Foo {
  init() {
    new cloud.Function(inflight () => {
      this.bar();
    });
  }

  inflight bar() {

  }
}

new Foo();
