examples/tests/invalid/inflight_class_created_in_preflight.w
inflight class Foo {}

new Foo();
// ^^^^^^^^^ Cannot create inflight class "Foo" in preflight phase
class PreflightClass {
  init() {
    new Foo();
//  ^^^^^^^^^ Cannot create inflight class "Foo" in preflight phase
  }

  preflightMethod() {
    new Foo();
//  ^^^^^^^^^ Cannot create inflight class "Foo" in preflight phase
  }
}